# nuva-evm-contracts

./: .env.example  .gitignore  .prettierrc.json  .solhint.json  Cargo.toml  GEMINI.md  README.md  hardhat.config.js  package-lock.json  package.json  txns.txt
.github/workflows/: ci.yml  release.yml
.openzeppelin/: base-sepolia.json  sepolia.json  unknown-560048.json
artifacts/contracts/CrossChainManager.sol/: CrossChainManager.dbg.json  CrossChainManager.json
artifacts/contracts/CrossChainVault.sol/: CrossChainVault.dbg.json  CrossChainVault.json
artifacts/contracts/CrossChainVaultGetters.sol/: CrossChainVaultGetters.dbg.json  (+1 more)
contracts/: CrossChainManager.sol  CrossChainVault.sol  CrossChainVaultGetters.sol  CrossChainVaultGovernance.sol  CrossChainVaultMessages.sol  CrossChainVaultSetters.sol  CrossChainVaultState.sol  CrossChainVaultStorage.sol  CrossChainVaultStructs.sol  CrossChainVaultV0.sol  CrossChainVaultV1.sol  CustomToken.sol  Depositor.sol  DepositorFactory.sol  Factory.sol  IFullERC20.sol  Lock.sol  TokenFactory.sol  Withdrawal.sol  WithdrawalFactory.sol
contracts/libraries/: AMLUtils.sol
contracts/mocks/: CrossChainManagerV2.sol  CrossChainVaultHarness.sol  CrossChainVaultV2 .sol  CrossChainVaultV2.sol  MockExecutor.sol
contracts/prime/: DedicatedVaultRouter.sol  NuvaVault.sol  RedemptionProxy.sol
contracts/test/: AMLTestContract.sol
docs/: CrossChainManager.md  CrossChainVault.md
scripts/: commands.sh  create.js  deploy.js
scripts/rust/token-contract/: Cargo.toml
scripts/rust/token-contract/src/: lib.rs
test/: AccessControlToken.js  CrossChainManager.js  CrossChainVault.js  CustomToken.js  DedicatedVaultRouter.test.js  Depositor.js  DepositorFactory.js  FactoryToken.js  PermitToken.js  TokenFactory.js  Withdrawal.js  WithdrawalFactory.js
test/helpers/: fixtures.js
(+295 files in other folders)
