[workspace]
members = [
    "scripts/rust/*",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
alloy = { version = "1.0.22", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
serde_json = "1.0.145"
ethers = "2.0.14"
url = "2.5.4"
alloy-sol-types = "1.0.22"
