[package]
name = "token-contract"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json.workspace = true
tokio.workspace = true
dotenv.workspace = true
ethers.workspace = true
alloy.workspace = true
url.workspace = true
anyhow.workspace = true
clap.workspace = true
alloy-sol-types.workspace = true
